--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,13 @@ body {
 .white {
 	color: #FFF;
 }
+
+@media (max-width: 1440px) {
+	.container.container-fluid {
+		width: 100%;
+		max-width: 1435px;
+	}
+}
 /* END COMMUN */
 
 /* HEADER */
@@ -83,6 +90,11 @@ header a, header a:hover {
 .menu_top a.person {
 	margin: 0 0 0 25px;
 	background-position: 100% 25px; 
+}
+@media (max-width: 990px) {
+	.logo_container {
+		text-align: center;
+	}
 }
 	/* SLIDE */
 .one_slide {
@@ -137,6 +149,36 @@ header a, header a:hover {
 	vertical-align: -10px;
 }
 
+@media (max-width: 780px) {
+
+	.one_slide {	 
+		text-align: center;
+		padding: 25px 19px 0 19px;
+	}
+	.one_slide img {	 
+		position: relative;
+		width: 130px;
+	}	
+	.slide_text {
+		margin: 0 0 0 0;
+	}
+	.one_slide h1 {
+		margin: 20px 0 10px 0;
+		text-align: center;
+		font-size: 35px;
+	}
+	.one_slide h4 {
+		margin: 0 0 10px 0;
+	}
+
+	.slide_links {
+		position: relative;
+		right: inherit;
+		margin: 25px 0 0 0;
+		text-align: center;
+	}
+}
+
 	/* END SLIDE */
 	/* NAV */
 nav {
@@ -173,6 +215,53 @@ nav ul ul li a {
 	text-transform: uppercase;
 	margin: 0 0 0 0;
 }
+.nav_open, .nav_close {
+	display: none;
+}
+@media (max-width: 990px) {
+	nav {
+		display: none;
+		position: absolute;
+		z-index: 100;
+		top: 0;
+		background: #273042;
+		width: 100%;
+		margin: 65px 0 0 0;
+
+	}
+	.nav_open {
+		position: absolute;
+		top: 15px;
+		right: 8px;
+		cursor: pointer;
+		z-index: 9;
+		display: block;
+	}
+	.nav_close {
+		position: absolute;
+		top: 15px;
+		right: 8px;
+		cursor: pointer;
+		display: none;
+		z-index: 9;
+	}
+	nav ul li, nav ul ul li {
+		display: block;
+		margin: 0 0 15px 25px; 
+		padding: 0;
+	}	
+
+	nav li ul {
+		display: block;
+		position: relative;
+		background: #273042;
+		padding: 5px 0 15px;
+	}
+	nav li.last a {
+		margin: 0 15px 0 0;
+		padding: 0;
+	}
+}
 	/* END NAV */
 
 /* END HEADER */
@@ -188,9 +277,10 @@ footer {
 /* PAGE CONTENT */
 #content {
 	background: #FFF;
+	margin: 0;
 }
 .galerie {
-	margin: 20px 0 0 0;
+	padding: 20px 0 0 0;
 	position: relative;
 }
 .galerie_img {
@@ -235,6 +325,15 @@ footer {
 }
 #map {
 	height: 724px;
-	margin: 20px 0 0 10px;
+	margin: 20px 0 70px 10px;
+}
+
+@media (max-width: 990px) {
+	.galerie .col-md-4 {
+		padding: 0 10px 0 10px;
+	}
+	#map {
+		margin: 20px 10px 70px 10px;
+	}
 }
 /* END PAGE CONTENT */
